--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,162 @@
-.App {
-  font-family: sans-serif;
+*,
+*::after,
+*::before {
+  padding: 0;
+  margin: 0;
+  font-family: inherit;
+  box-sizing: border-box;
+}
+html,
+body {
+  background-color: #0d0d0d;
+  color: #e3dacb;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+}
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+
+button {
+  cursor: pointer;
+}
+.visually-hidden {
+  position: absolute !important;
+  clip: rect(1px, 1px, 1px, 1px);
+  padding: 0 !important;
+  border: 0 !important;
+  height: 1px !important;
+  width: 1px !important;
+  overflow: hidden;
+  white-space: nowrap;
+}
+.text_large {
+  font-size: 32px;
+}
+.text_small {
+  font-size: 24px;
+}
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  width: 520px;
+  max-width:100%;
+}
+@media (max-width: 510px) {
+  header {
+    justify-content: center;
+  }
+}
+header {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 12px;
+  padding: 42px 0;
+}
+.todohero_section {
+  border: 1px solid #e3dacb;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  align-self: center;
+  width: 100%;
+  padding: 24px 32px;
+  border-radius: 11px;
+}
+.todohero_section div:last-child {
+  background-color: #ad956d;
+  color: #000;
+  width: 100px;
+  height: 100px;
+  border-radius: 75px;
+  font-size: 32px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   text-align: center;
+}
+.form {
+  align-self: center;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  margin-top: 38px;
+}
+.form label {
+  width: 90%;
+}
+.form input {
+  background-color: #1f2937;
+  color: #e3dacb;
+  width: 100%;
+  height: 50px;
+  outline: none;
+  border: none;
+  border-radius: 11px;
+  padding: 12px;
+}
+.form button {
+  width: 50px;
+  height: 50px;
+  border-radius: 11px;
+  background-color: #ad956d;
+  border: none;
+}
+.todo_list {
+  align-self: center;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 27px;
+  margin-bottom: 27px;
+  gap: 27px;
+}
+.todo_item,
+.edit-form input {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 70px;
+  width: 100%;
+  max-width: 455px;
+  border: 1px solid #e3dacb;
+  font-size: 16px;
+  background-color: #0d0d0d;
+  color: #e3dacb;
+  padding: 12px;
+}
+.edit-form input {
+  outline: transparent;
+  width: calc(100% - 14px);
+  height: calc(100% - 12px);
+  border: transparent;
+}
+.todo_items_left,
+.todo_items_right {
+  display: flex;
+  align-items: center;
+}
+.todo_items_left {
+  background-color: transparent;
+  border: none;
+  color: #e3dacb;
+  gap: 12px;
+  font-size: 16px;
+}
+.todo_items_right {
+  gap: 4px;
+}
+.todo_items_right button {
+  background-color: transparent;
+  color: #e3dacb;
+  border: none;
+}
+.todo_items_right button svg {
+  fill: #e3dacb;
 }
