--- a/src/styles.css
+++ b/src/styles.css
@@ -112,7 +112,6 @@ header {
   width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
   margin-top: 27px;
   margin-bottom: 27px;
   gap: 27px;
@@ -124,12 +123,14 @@ header {
   align-items: center;
   height: 70px;
   width: 100%;
-  max-width: 455px;
   border: 1px solid #e3dacb;
   font-size: 16px;
   background-color: #0d0d0d;
   color: #e3dacb;
   padding: 12px;
+}
+.todo_item {
+  border-radius: 11px;
 }
 .edit-form input {
   outline: transparent;
